--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,14 +1,22 @@
+include(../cmake/CPM.cmake)
+
 #------------------------------
 # GLFW
 # Desktop Window Library
 #------------------------------
+CPMAddPackage(
+        NAME glfw
+        GITHUB_REPOSITORY glfw/glfw
+        GIT_TAG 3.3.2
+        OPTIONS
+        "GLFW_BUILD_TESTS OFF"
+        "GLFW_BUILD_EXAMPLES OFF"
+        "GLFW_BULID_DOCS OFF"
+        "GLFW_INSTALL OFF"
+        "GLFW_USE_HYBRID_HPG OFF"
+)
+
 if(NOT TARGET glfw AND NOT PLATFORM_ANDROID)
-    set(GLFW_INSTALL OFF)
-    set(GLFW_BUILD_EXAMPLES OFF)
-    set(GLFW_BUILD_TESTS OFF)
-    set(GLFW_BUILD_DOCS OFF)
-    set(GLFW_USE_HYBRID_HPG OFF)
-    add_subdirectory(glfw)
     set_property(TARGET glfw PROPERTY FOLDER "Libs")
 endif()
 
@@ -16,19 +24,28 @@ endif()
 # nlohmann JSON
 # JSON for Modern C++
 #--------------------------------
+CPMAddPackage(
+        NAME nlohmann_json
+        GITHUB_REPOSITORY nlohmann/json
+        VERSION 3.11.2
+        OPTIONS
+            "JSON_BuildTests OFF"
+            "JSON_Install OFF"
+)
 if(NOT TARGET nlohmann_json)
-    set(JSON_BuildTests OFF)
-    set(JSON_Install OFF)
-    add_subdirectory(nlohmann_json)
     set_property(TARGET nlohmann_json PROPERTY FOLDER "Libs")
 endif()
 
 #------------------------------
-# GLFW
+# GLM
 # Game mathematics library
 #------------------------------
+CPMAddPackage(
+        NAME glm
+        GITHUB_REPOSITORY g-truc/glm
+        GIT_TAG 0.9.9.8
+)
 if(NOT TARGET glm)
-    add_subdirectory(glm)
     set_property(TARGET glm PROPERTY FOLDER "Libs")
 endif()
 
@@ -47,7 +64,7 @@ endif()
 #------------------------------
 if(AU_FMOD_SOUND)
     add_subdirectory(fmod)
-    #set_property(TARGET fmod PROPERTY FOLDER "Libs")
+    set_property(TARGET fmod PROPERTY FOLDER "Libs")
 endif()
 
 #------------------------------
@@ -63,15 +80,21 @@ endif()
 # FreeType
 # Font library
 #------------------------------
-if(NOT TARGET freetype)
-    set(FT_WITH_BROTLI OFF)
-    set(FT_WITH_HARFBUZZ OFF)
-    set(CMAKE_DISABLE_FIND_PACKAGE_ZLIB ON)
-    set(CMAKE_DISABLE_FIND_PACKAGE_BZip2 ON)
-    set(CMAKE_DISABLE_FIND_PACKAGE_PNG ON)
-    set(CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz ON)
-    set(CMAKE_DISABLE_FIND_PACKAGE_BrotliDec ON)
-    add_subdirectory(freetype)
+CPMAddPackage(
+        NAME freetype
+        GIT_REPOSITORY https://github.com/aseprite/freetype2.git
+        GIT_TAG VER-2-10-0
+        VERSION 2.10.0
+        OPTIONS
+            "FT_WITH_BROTLI OFF"
+            "FT_WITH_HARFBUZZ OFF"
+            "CMAKE_DISABLE_FIND_PACKAGE_ZLIB ON"
+            "CMAKE_DISABLE_FIND_PACKAGE_BZip2 ON"
+            "CMAKE_DISABLE_FIND_PACKAGE_PNG ON"
+            "CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz ON"
+            "CMAKE_DISABLE_FIND_PACKAGE_BrotliDec ON"
+)
+if(freetype_ADDED)
     set_property(TARGET freetype PROPERTY FOLDER "Libs")
 endif()
 
@@ -79,22 +102,33 @@ endif()
 # RmlUI
 # UI render library
 #------------------------------
+
+CPMAddPackage(
+    NAME RmlUI
+    GITHUB_REPOSITORY SamCZ/RmlUi
+    GIT_TAG master
+    OPTIONS
+        "BUILD_SAMPLES OFF"
+        "BUILD_TESTING OFF"
+        "NO_FONT_INTERFACE_DEFAULT OFF"
+        "NO_THIRDPARTY_CONTAINERS ON"
+)
 if(NOT TARGET RmlUI)
-    set(BUILD_SAMPLES OFF)
-    set(BUILD_TESTING OFF)
-    set(NO_FONT_INTERFACE_DEFAULT OFF)
     #set(CUSTOM_CONFIGURATION ON)
     #set(CUSTOM_LINK_LIBRARIES freetype)
-    set(NO_THIRDPARTY_CONTAINERS ON)
-    add_subdirectory(RmlUI)
     set_property(TARGET RmlCore PROPERTY FOLDER "Libs")
     set_property(TARGET RmlDebugger PROPERTY FOLDER "Libs")
 endif()
 
 #------------------------------
-# RmlUI
-# UI render library
+# Tracy
+# something
 #------------------------------
+CPMAddPackage(
+    NAME TracyClient
+    GITHUB_REPOSITORY wolfpld/tracy
+    GIT_TAG master
+)
 if(NOT TARGET TracyClient)
     if(AU_CPU_PROFILE)
         set(TRACY_ENABLE ON)
@@ -105,7 +139,6 @@ if(NOT TARGET TracyClient)
     set(BUILD_SHARED_LIBS_CACHE ${BUILD_SHARED_LIBS})
     set(BUILD_SHARED_LIBS OFF)
 
-    add_subdirectory(tracy)
     set_property(TARGET TracyClient PROPERTY FOLDER "GameLib")
     if(WIN32)
         target_link_libraries(TracyClient PUBLIC Ws2_32 dbghelp)
@@ -119,6 +152,25 @@ endif()
 # ASSIMP
 # Model loading library
 #------------------------------
+CPMAddPackage(
+        NAME assimp
+        GITHUB_REPOSITORY assimp/assimp
+        VERSION 5.2.5
+        OPTIONS
+            "ASM686 OFF"
+            "AMD64 OFF"
+            "ASSIMP_BUILD_ZLIB ON"
+            "ASSIMP_BUILD_TESTS OFF"
+            "ZLIB_AMD64 OFF"
+            "ASSIMP_NO_EXPORT ON"
+            "ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF"
+            "ASSIMP_BUILD_FBX_IMPORTER ON"
+            "ASSIMP_BUILD_GLTF_IMPORTER OFF"
+            "ASSIMP_BUILD_COLLADA_IMPORTER OFF"
+            "ASSIMP_BUILD_DRACO OFF"
+            "ASSIMP_BUILD_ASSIMP_TOOLS OFF"
+            "ASSIMP_INSTALL OFF"
+)
 if(NOT TARGET assimp)
     IF (CMAKE_BUILD_TYPE MATCHES Debug AND NOT PLATFORM_ANDROID)
         set(BUILD_SHARED_LIBS ON)
@@ -132,26 +184,40 @@ if(NOT TARGET assimp)
         set(BUILD_SHARED_LIBS ON)
     endif()
 
-    set(ASM686 OFF)
-    set(AMD64 ON)
-    set(ASSIMP_BUILD_ZLIB ON)
-    set(ASSIMP_BUILD_TESTS OFF)
-    set(ZLIB_AMD64 ON)
-    set(ASSIMP_NO_EXPORT ON)
-    set(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF)
-    set(ASSIMP_BUILD_FBX_IMPORTER ON)
-    set(ASSIMP_BUILD_GLTF_IMPORTER OFF)
-    set(ASSIMP_BUILD_COLLADA_IMPORTER OFF)
-    set(ASSIMP_BUILD_DRACO OFF)
-    set(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
-    set(ASSIMP_INSTALL OFF)
-    add_subdirectory(assimp)
-
     set_property(TARGET assimp PROPERTY FOLDER "Libs")
     set(BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS_CACHE})
 endif()
 
+#-----
+# stb
+#-----
 if(NOT TARGET stb_utils)
     add_subdirectory(stb)
     set_property(TARGET stb_utils PROPERTY FOLDER "Libs")
+endif()
+
+#-------------------
+# Lua
+# Scripting language
+#-------------------
+CPMAddPackage(
+        NAME lua
+        GIT_REPOSITORY https://github.com/lua/lua.git
+        VERSION 5.3.5
+        DOWNLOAD_ONLY YES
+)
+
+if (lua_ADDED)
+    # lua has no CMake support, so we create our own target
+
+    FILE(GLOB lua_sources ${lua_SOURCE_DIR}/*.c)
+    list(REMOVE_ITEM lua_sources "${lua_SOURCE_DIR}/lua.c" "${lua_SOURCE_DIR}/luac.c")
+    add_library(lua STATIC ${lua_sources})
+
+    target_include_directories(lua
+            PUBLIC
+            $<BUILD_INTERFACE:${lua_SOURCE_DIR}>
+            )
+
+    set_property(TARGET lua PROPERTY FOLDER "Libs")
 endif()
