--- a/lib/stb/CMakeLists.txt
+++ b/lib/stb/CMakeLists.txt
@@ -1,3 +1,9 @@
 project(stb_utils)
 add_library(stb_utils INTERFACE)
-target_include_directories(stb_utils INTERFACE stb/)
+CPMAddPackage(
+        NAME stb
+        GIT_REPOSITORY https://github.com/nothings/stb.git
+        GIT_TAG master
+        DOWNLOAD_ONLY YES
+)
+target_include_directories(stb_utils INTERFACE ${stb_SOURCE_DIR})
